--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "ride/cli-import",
     "description": "Import command for the Ride CLI",
     "license": "MIT",
-    "version": "0.2.0",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -10,9 +9,10 @@
         }
     ],
     "require": {
-	"ride/cli": ">=0.5.0",
-        "ride/lib-cli": ">=0.1.0",
-        "ride/lib-import": ">=0.1.0"
+        "ride/app": "^1.0.0",
+        "ride/cli": "^1.0.0",
+        "ride/lib-cli": "^1.0.0",
+        "ride/lib-import": "^1.0.0"
     },
     "autoload": {
         "psr-0": {
